--- a/templates/app_ingress-nginx.yaml
+++ b/templates/app_ingress-nginx.yaml
@@ -1,28 +1,27 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: cert-manager
+  name: ingress-nginx
   namespace: argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
   project: default
   source:
-    repoURL: https://github.com/kranurag78/gitopss.git
-    path: cert-manager
-    directory:
-      recurse: true
-    targetRevision: main
+    repoURL: https://kubernetes.github.io/ingress-nginx
+    chart: ingress-nginx
+    targetRevision: 'v4.8.1'
     helm:
-      valueFiles:
-        - values-cert-manager.yaml
       parameters:
         - name: installCRDs
           value: 'true'
+      # valueFiles:
+      #   - values-cert-manager.yaml
   destination:
-    namespace: cert-manager
-    name: kind
+    namespace: ingress-nginx
+    name: in-cluster
   syncPolicy:
     automated: {}
     syncOptions:
       - CreateNamespace=true
+      - ServerSideApply=true
