--- a/root_app.yaml
+++ b/root_app.yaml
@@ -2,16 +2,18 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: app-of-apps
+  namespace: argocd
 spec:
   destination:
-    name: https://kubernetes.default.svc
+    name: in-cluster
     namespace: argocd
   source:
-    path: apps
+    path: .
     repoURL: https://github.com/kranurag78/gitopss.git
     targetRevision: HEAD
   project: default
   syncPolicy:
     automated:
-      prune: true
       selfHeal: true
+    syncOptions:
+    - CreateNamespace=true
