--- a/templates/app_cert-manager.yaml
+++ b/templates/app_cert-manager.yaml
@@ -1,25 +1,25 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: ingress-nginx
+  name: cert-manager
   namespace: argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
   project: default
   source:
-    repoURL: https://github.com/kranurag78/gitopss.git
-    path: ingress-nginx
-    directory:
-      recurse: true
-    targetRevision: main
+    repoURL: https://charts.jetstack.io
+    chart: cert-manager
+    targetRevision: 'v1.13.1'
     helm:
-      valueFiles:
-        - values-ingress-nginx.yaml
+      parameters:
+        - name: installCRDs
+          value: 'true'
   destination:
-    namespace: ingress-nginx
-    name: kind
+    namespace: cert-manager
+    name: in-cluster
   syncPolicy:
     automated: {}
     syncOptions:
       - CreateNamespace=true
+      - ServerSideApply=true
